[package]
name = "vardbpkg"
version = "0.1.0"
edition = "2024"
description = "Library for handling the Portage Installed Packet Database of Gentoo Linux"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Komplix/vardbpkg-lib"
keywords = ["gentoo", "portage", "parser"]
categories = ["parsing", "os::linux-apis"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"

